<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MCHPregnancyGuide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_visit">VisitActivity</string>
    <string name="visit_notification_title_template">Visit: %1$s</string>
    <string name="visit_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_recommendations">Recommendations</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_phone_number">Mobile Phone Number</string>
    <string name="enter_phone_number">Your mobile phone number:</string>
    <string name="phone_format">Format: +380 xx xxx xx xx for a Ukrainian number</string>
    <string name="action_visits">Visits</string>
    <string name="action_login">Login</string>
    <string name="action_recommendations">Recommendations</string>
    <string name="action_phonenumber">Mobile Number</string>
    <string name="number_invalid">The phone number format is invalid, please try again</string>
    <string name="gcm_project_id">210193935586</string>

</resources>
