<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PregnancyInfo" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_recommendations"
        android:title="@string/action_recommendations"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        />
    <item android:id="@+id/action_visits"
        android:title="@string/action_visits"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        />
    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_phonenumber"
        android:title="@string/action_phonenumber"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
</menu>
